--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,11 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+networkx = "^3.4.2"
+sqlalchemy = "^2.0.36"
+redis = "^5.2.1"
+discord-py = "^2.4.0"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
