--- a/.gitignore
+++ b/.gitignore
@@ -7,54 +7,4 @@ __pycache__/
 logs/
 data/
 .vscode/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+*.pyc
