Enhance project structure with new services and configurations
- Added `pydantic-settings` and `watchdog` dependencies for improved configuration management and file monitoring.
- Introduced core service classes for managing Discord bot operations, including `Bot`, `ProcessManager`, and `CogLoader`.
- Implemented configuration management using `pydantic` for service settings in `config.py`.
- Established a robust exception handling framework with custom exceptions for service-related errors.
- Developed a service factory and registry for streamlined service creation and management.
- Created a Redis-based caching service with advanced features for data storage and retrieval.
- Set up a database service with support for asynchronous operations and session management.
- Added initial structure for various service modules, including cache and database interfaces.
- Enhanced logging capabilities with a custom logger for better monitoring and debugging.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 colorama = "^0.4.6"
 discord-py = "^2.4.0"
+pydantic-settings = "^2.7.0"
+watchdog = "^6.0.0"
 
 
 [build-system]
