Refactor bot initialization and enhance LLM integration
- Improved error handling in `main.py` to ensure bot closure only occurs if initialized.
- Updated `poetry.lock` to include new dependencies for Groq integration and other services.
- Refactored service initialization in `client.py` to include a dedicated `ServiceManager`.
- Enhanced `LLMEventsCog` to utilize a service registry for cache management.
- Streamlined message processing in `GroqProvider` to handle both text and image messages effectively.
- Updated logging mechanisms for better error tracking and debugging across modules.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ colorama = "^0.4.6"
 discord-py = "^2.4.0"
 pydantic-settings = "^2.7.0"
 watchdog = "^6.0.0"
+groq = "^0.13.1"
 
 
 [build-system]
